--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
     <div class="app">
@@ -129,6 +129,6 @@
         </div>
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
